--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <!-- Step 3 Add Header -->
+<%-include("partials/header.js") %>
 
 
 <!-- Step 2 - If an adjective and noun are sent to this ejs file, 
@@ -10,3 +11,4 @@
   <input type="submit" value="Generate Name">
 </form>
 <!-- Step 3 Add Footer -->
+<%-include("partials/footer.js") %>
