--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,17 @@
-<!-- Step 3 Add Header -->
-<%-include("partials/header.js") %>
+<%- include("partials/header.ejs") %>
 
+    <% if (locals.randGenName){ %>
 
-<!-- Step 2 - If an adjective and noun are sent to this ejs file, 
-    Change the h1 to show the adjective and noun.
-    But when the user first goes on the website and there is no adjective and noun, 
-    Show the default h1 below -->
+     <h1> <%= randGenName %> </h1> 
+
+   <% } else { %>
+
+    <h1>Welcome to the Band Generator 🤟</h1>
+   
+    <% } %>
 
 <form action="/submit" method="POST">
   <input type="submit" value="Generate Name">
 </form>
-<!-- Step 3 Add Footer -->
-<%-include("partials/footer.js") %>
+
+<%- include("partials/footer.ejs") %>
